--- a/public/about.html
+++ b/public/about.html
@@ -81,8 +81,8 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: Navbar, generateJSON.js, build pipeline, and use bootstrap combined with ploty to implement the baseline macro view of the world.</p>
-    <p>Nicole: siteGenerator.js, learn how to make drop down menus, home page, mirco views</p>
+    <p>Solomon: Navbar and use bootstrap combined with ploty to implement the baseline micro and macro views of the world.</p>
+    <p>Nicole: siteGenerator.js, learn how to make drop down menus, create all clickable links, specifically on each country (once they have been implemented)</p>
     <p>Solomon+Nicole: Clean up the UI and use CSS/Bootstrap to make it appear neat for the final presentation</p>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
