--- a/public/BRA.html
+++ b/public/BRA.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>BRA</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,4.4,5,4.8,4.6,5.2,5,4.8,,,,,4.8,5.1,4.9,4.9,5.1,5.5,5.6,5.5,5.5,4.9,5.1,5.5,5.3,5.2,5.3,5.6,5.4,5.5,5.6,5.6,5.6,5.7,5.9,5.9,5.8,6.1,6.1,6.5,6.5,6.7,],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
