--- a/public/CZE.html
+++ b/public/CZE.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>CZE</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,24.2,21.4,21.7,21.2,22.3,20.8,21.4,20.6,19.8,18.2,16.3,17,16.4,16.4,16.5,16.1,15.3,17.1,15.4,15.2,13.4,13.1,13,13.6,13.9,14.7,15.2,14.5,13.7,12.6,12,12.8,12.3,10.7,10.9],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
