--- a/public/EST.html
+++ b/public/EST.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>EST</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,40.1,35.5,,33.6,,31,28.1,27.6,28.1,30.3,30.2,35.3,41.7,44.5,43.7,41.9,39.4,36,35.5,27.5,29.8,27.3,25,24,20.1,17.8,18.8,17.7,19.8,16.2,15.7,17.2,15.9,17.7,14.5,13.3,16.5,14,14.1,15.2],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
