--- a/public/HRV.html
+++ b/public/HRV.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>HRV</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,25.3,,24.8,27,26.4,24.7,27,25.2,26.1,24.8,25.1,21.3,24.9,23.3,25.7,24.2,24,19.9,20.2,19.5,19.7,19.3,17.6,17.1,17.6,17.3,16.9,15.1,17,15.3,15.9,16.3,15.1,14,,13,],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
