--- a/public/ISR.html
+++ b/public/ISR.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>ISR</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,11.8,11.9,8.9,8.1,9.6,8.8,7.6,7.1,9,7.9,8.1,9.4,9.4,9.8,11.3,9.1,10.3,9.9,9.5,10.5,8.7,7,8.3,6.8,7.4,7.5,7.5,7,7.8,7.3,7.5,6.1,5.5,5.8,6.3,7.5,6.4,6.6,5.6,5.6,5,5.6,5.6,6.2,5.7,5.7],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
