--- a/public/KOR.html
+++ b/public/KOR.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>KOR</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,11.5,10.6,9.9,8.6,8.8,9,8.6,9.7,11.6,11.9,12.7,15.2,16.3,22.7,18.9,17.5,18.9,23.9,29.7,31.2,31.6,27.8,30.3,30.3,35.3,35,34.7,30.3,29.8,27.6,26.8,25.5,23.8,25.5,25.4,24.1],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
