--- a/public/LTU.html
+++ b/public/LTU.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>LTU</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,37.4,37.8,,37.8,,28.6,32.8,29.7,30.1,29.3,33.9,38.9,47,50.8,51.1,52,48.8,47.3,46.8,49.3,46.7,46.8,43.8,41.9,40.3,32,31.6,34.3,35.1,32.2,32.9,30.1,35.4,30.4,29.6,27.3,25,22.9,22.2,20.3],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
