--- a/public/RUS.html
+++ b/public/RUS.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>RUS</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,37.7,37.4,37.8,,34.4,,26.2,26.5,27.7,29,29.6,29.3,33.8,41.2,45.3,44.2,41.7,39.5,37,40.7,40.2,40.2,38.7,36.2,34.3,31.8,29.7,28.4,26.5,25.7,22.8,21.3,20.3,19.6,18.3,17.1,,,,11.7,],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
