--- a/public/SVN.html
+++ b/public/SVN.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>SVN</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,36.7,,33.8,35.2,35.7,38,31,35.5,32.1,33.1,33,29.9,32.2,30.8,31.7,30.7,30.4,29.6,27,28,24.8,24.4,25.6,20.7,19.2,20.8,19.2,20.1,20.1,20.3,17.5,18.9,16.8,18.1,15.7,17.2,15.7],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
