--- a/public/ZAF.html
+++ b/public/ZAF.html
@@ -16,6 +16,14 @@
 <body>
   <header>
     <h1>ZAF</h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [, , ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,0.6,0.4,0.7,0.9,0.7,0.9,0.6,0.7,1.1,1.2,1.3,1,1.1,0.8,1,0.8,1.1,1.3,1.2,1,0.8,0.7,0.6,,],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
