--- a/public/about.html
+++ b/public/about.html
@@ -71,7 +71,7 @@
     <p>Cultural[privacy]- The rates are related only to countries and not specific cities or neighborhoods, so privacy is ensured.</p>
     <h4>Elements selected:</h4>
     <p>Hyperlinking the websites we will get our information from for the probable causes.</p>
-    <img src="newProjectPipeline.png" alt="Project Pipeline Graphic" height=200px>
+    <img src="newProjectPipeline.jpeg" alt="Project Pipeline Graphic" height=200px>
     <h5>Descriptions of our pipeline:</h5>
     <p>We first brainstormed on what topic we wanted to cover and then looked to find csv files we could use.</p>
     <p>We made our sketches of what we wanted the website to look like and discussed the pros and cons to each design.</p>
